[package]
name = "gazer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.8"
serde = "1.0.129"
serde_derive = "1.0.129"
serde_json = "1.0.66"
tungstenite = { version = "0.15.0", features = ["native-tls"] }
url = "2.2.2"
